<resources>
    <string name="app_name">MyStocks</string>
    <string name="sample_word">AAA</string>
    <string name="sample_digit">99.9</string>
    <string name="asset">Asset</string>
    <string name="history">History</string>
    <string name="report">Report</string>
    <string name="symbol">Symbol</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="shares">Shares</string>
    <string name="order">Order</string>
    <string name="action">Action</string>
    <string name="stop_loss">StopLoss</string>
    <string name="gain_loss">Gain/Loss</string>
    <string name="submit">Submit</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_fab">Order</string>
    <string name="under_construction">Under Construction</string>
    <string name="win_rate">Win Rate</string>
    <string name="sample_percent">99.9%</string>
    <string name="gain">Gain</string>
    <string name="loss">Loss</string>
    <string name="net_profit">Net Profit</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="hint_calendar">Date Picker</string>
    <string name="zero">0.00</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="transaction_cost">Transaction Cost</string>
    <string name="value_added_tax">Value Added Tax</string>
    <string name="recovery">Database Recovery</string>
    <string name="stop_threshold">Stop Loss Threshold</string>
    <string name="save">Save</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
</resources>