<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/grpSymbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <AutoCompleteTextView
            android:id="@+id/edSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:completionThreshold="1"
            android:hint="@string/symbol"
            android:imeOptions="actionNext"
            android:inputType="textCapCharacters"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageButton
            android:id="@+id/imSymbol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/hint_clear"
            android:paddingHorizontal="12dp"
            android:src="@drawable/ic_baseline_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grpPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grpSymbol"
        android:layout_marginVertical="8dp">

        <EditText
            android:id="@+id/edPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageButton
            android:id="@+id/imPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/hint_clear"
            android:paddingHorizontal="12dp"
            android:src="@drawable/ic_baseline_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grpShares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grpPrice"
        android:layout_marginVertical="8dp">

        <EditText
            android:id="@+id/edShares"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/shares"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageButton
            android:id="@+id/imShares"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/hint_clear"
            android:paddingHorizontal="12dp"
            android:src="@drawable/ic_baseline_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grpShares"
        android:layout_marginVertical="8dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:padding="10dp"
            android:text="@string/date_format"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageButton
            android:id="@+id/imDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/hint_calendar"
            android:paddingHorizontal="12dp"
            android:src="@drawable/baseline_calendar_month" />
    </LinearLayout>

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grpDate"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>